--- a/paper/ecir25-longeval-part3.tex
+++ b/paper/ecir25-longeval-part3.tex
@@ -3,3 +3,10 @@
 Our approach.
 
 Short analysis: how much did documents change? We use CopyCat~\cite{froebe:2021a}, as it was previously used to deduplicate web crawls, e.g., the ClueWebs, in default settings. ToDo: add motivation for measure and containment conceptually implemented by the S3 score.
+
+\begin{figure}[t]
+\includegraphics[width=\textwidth]{document-similarities}
+\vspace{-4ex}
+\caption{S$_{3}$ Similarities of documents with overlapping URLs as eCDF plot.}
+\label{fig:document-similarities}
+\end{figure}
