add introduction draft

--- a/paper/ecir25-longeval-part1.tex
+++ b/paper/ecir25-longeval-part1.tex
@@ -1,25 +1,14 @@
 \section{Introduction}
 
-Many of the queries a search engine receives have been seen before {\color{red}[CITATION]}. XY.
+Many of the queries a search engine receives have been seen before {\color{red}[CITATION]}. By analyzing how users interact with the displayed results for these queries, valuable relevance information can be gathered. Such signals can be directly leveraged to improve the search engine's effectiveness. For example, based on the documents users click for a query, click models can be constructed that synthesize a relevance indicator. Based on these created labels, documents can be boosted or rerankers trained. While relevance feedback has shown to be effective, exploiting it as a boosting feature directly has a limited application. Time plays a crucial role since the queries, documents, and even the relevance may evolve over time. Documents may change their content, queries their intent, and even if both are static, the relevance may change because of external factors.
 
-\begin{table}
-    \caption{Taxonomy reproduced and adapted from~\cite{keller:2024}.}
-    \label{tab:CRUD}
-    \begin{tabularx}{\linewidth}{l | X | X | X}
-        \toprule
-        {}       & \texttt{CREATE}          & \texttt{UPDATE}                 & \texttt{DELETE} \\ \midrule
-        Document & New unseen documents     & Known URL but changed website   & URL not in sub-collection anymore              \\\midrule
-        Topic    & New query                & Fixed typos, translation or changed accents marks                               & Query not in sub-collection anymore \\\midrule
-        Qrel     & New relevance label      & Known document query pair but changed relevance & Relevance became unknown   \\\bottomrule
-    \end{tabularx}
-\end{table}
+To address these challenges, we explore how previous relevance labels can be used for query expansion in a temporal setting. Therefore, we describe different classes of temporal changes in websites and propose to create key queries based on the previously relevant documents.
 
-Changes in test collections are described on a high level by Keller et al. in~\cite{keller:2024} along the main components of a test collection, the documents, topics, and qrels, and the create, update, and delete operation of persistent storage. While the LongEval dataset contains changes in all components of all types, the investigated approaches are mainly concerned with changing documents that may also affect the relevance label.
+{\color{red}[key query introduction]}
 
-
-
-% We investigate the scenario D'TQ' and D'TQ -> Changes in the documents with and without changes in the qrels
-% Table 2 refers to the scenario of D'TQ -> documents changes but relevance stayed the same
+Through this method, we could exploit relevance feedback beyond known query document pairs to new documents. 
+The different retrieval scenarios and change operations are mapped out and 
+The approaches are tested in a preliminary evaluation based on the LongEval test collection and compared to different query expansion and boosting baselines.
 
 
 
