Add text to the keyqueries part

--- a/paper/ecir25-longeval-lit.bib
+++ b/paper/ecir25-longeval-lit.bib
@@ -1,3 +1,10 @@
+@misc{amati:2003,
+  title={Divergence from Randomness.},
+  author={Amati, Giambattista},
+  publisher = { Department of Computer Science, University of Glasgow,},
+  year={2003}
+}
+
 @InProceedings{froebe:2021a,
   author =                   {Maik Fr{\"o}be and Janek Bevendorff and Lukas Gienapp and Michael V{\"o}lske and Benno Stein and Martin Potthast and Matthias Hagen},
   booktitle =                {44th International ACM Conference on Research and Development in Information Retrieval (SIGIR 2021)},
@@ -11,6 +18,24 @@
   title =                    {{CopyCat: Near-Duplicates within and between the ClueWeb and the Common Crawl}},
   year =                     2021
 }
+
+@inproceedings{froebe:2021c,
+  title={Efficient query obfuscation with keyqueries},
+  author={Fr{\"o}be, Maik and Schmidt, Eric Oliver and Hagen, Matthias},
+  booktitle={IEEE/WIC/ACM International Conference on Web Intelligence and Intelligent Agent Technology},
+  pages={154--161},
+  year={2021}
+}
+
+
+@inproceedings{froebe-mis:2022,
+  title={Using Keyqueries to Reduce Misinformation in Health-Related Search Results.},
+  author={Fr{\"o}be, Maik and G{\"u}nther, Sebastian and Bondarenko, Alexander and Huck, Johannes and Hagen, Matthias},
+  booktitle={ROMCIR@ ECIR},
+  pages={1--10},
+  year={2022}
+}
+
 
 @InProceedings{froebe:2022d,
   address =                  {Berlin Heidelberg New York},
@@ -28,6 +53,15 @@
   volume =                   13390,
   year =                     2022
 }
+
+@article{jaleel:2004,
+  title={UMass at TREC 2004: Novelty and HARD},
+  author={Abdul-Jaleel, Nasreen and Allan, James and Croft, W Bruce and Diaz, Fernando and Larkey, Leah and Li, Xiaoyan and Smucker, Mark D and Wade, Courtney},
+  journal={Computer Science Department Faculty Publication Series},
+  pages={189},
+  year={2004}
+}
+
 
 @InProceedings{keller:2024,
   author       = {J{\"{u}}ri Keller and Timo Breuer and Philipp Schaer},
