--- a/notebooks/create_index_splits.ipynb
+++ b/notebooks/create_index_splits.ipynb
@@ -4,29 +4,13 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "from sklearn.model_selection import KFold\n",
-    "import yaml\n",
-    "import pyterrier as pt\n",
-    "import os\n",
-    "import json"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/pz/f66p4s0s11z2c1c1l3v0qbh40000gn/T/ipykernel_25572/1690991193.py:1: DeprecationWarning: Call to deprecated function (or staticmethod) started. (use pt.java.started() instead) -- Deprecated since version 0.11.0.\n",
-      "  if not pt.started():\n",
       "Java started and loaded: pyterrier.java, pyterrier.terrier.java [version=5.10 (build: craigm 2024-08-22 17:33), helper_version=0.0.8]\n",
-      "/var/folders/pz/f66p4s0s11z2c1c1l3v0qbh40000gn/T/ipykernel_25572/1690991193.py:2: DeprecationWarning: Call to deprecated method pt.init(). Deprecated since version 0.11.0.\n",
+      "/Users/jueri/dev/conf25-counterfactual-query-rewriting/notebooks/../src/create_index.py:9: DeprecationWarning: Call to deprecated method pt.init(). Deprecated since version 0.11.0.\n",
       "The following code will have the same effect:\n",
       "pt.java.add_package('com.github.terrierteam', 'terrier-prf', '-SNAPSHOT')\n",
       "pt.java.init() # optional, forces java initialisation\n",
@@ -35,22 +19,29 @@
     }
    ],
    "source": [
-    "if not pt.started():\n",
-    "    pt.init(boot_packages=[\"com.github.terrierteam:terrier-prf:-SNAPSHOT\"])"
+    "import sys\n",
+    "sys.path.append('../')\n",
+    "\n",
+    "from sklearn.model_selection import KFold\n",
+    "import yaml\n",
+    "import json\n",
+    "\n",
+    "from src.create_index import load_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "BASE_PATH = \"../data\"\n",
+    "RESULTS_PATH = BASE_PATH + \"/results\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "BASE_PATH = \"../data\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,67 +51,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def doc_itter(sub_collection, fold: set):\n",
-    "    documents_path = os.path.join(\n",
-    "        BASE_PATH, config[\"subcollections\"][sub_collection][\"documents\"][\"json\"][\"en\"]\n",
-    "    )\n",
-    "    documents = [\n",
-    "        os.path.join(documents_path, path) for path in os.listdir(documents_path)\n",
-    "    ]\n",
-    "    for doc_split_path in documents:\n",
-    "        print(doc_split_path)\n",
-    "        with open(doc_split_path, \"r\") as f:\n",
-    "            docs = json.load(f)\n",
-    "            for doc in docs:\n",
-    "                docno = doc[\"id\"]\n",
-    "                if docno not in fold:      \n",
-    "                    yield {'docno' : docno, 'text' : doc[\"contents\"]}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def create_index(sub_collection, split_id, fold):\n",
-    "    iter_indexer = pt.IterDictIndexer(BASE_PATH + f\"/index/{sub_collection}_{split_id}\", meta={'docno': 20, 'text': 8096}, verbose=True)\n",
-    "    indexref = iter_indexer.index(doc_itter(sub_collection, fold))\n",
-    "    return indexref"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def load_data(sub_collection):\n",
-    "    # Test collection\n",
-    "    topics = pd.read_csv(BASE_PATH + \"/\" +config[\"subcollections\"][sub_collection][\"topics\"][\"test\"][\"tsv\"][\"en\"], sep=\"\\t\", names=[\"qid\", \"query\"])\n",
-    "    qrels = pd.read_csv(BASE_PATH + \"/\" +config[\"subcollections\"][sub_collection][\"qrels\"][\"test\"], sep=\" \", names=[\"qid\", \"Q0\", \"docno\", \"relevance\"])\n",
-    "    \n",
-    "    # ID maps\n",
-    "    docid_map = pd.read_csv('../data/document-groups-relevant.csv.gz', compression='gzip')\n",
-    "    docid_map_patch = docid_map[[sub_collection, \"t\"+str(int(sub_collection[-1])+1)]].dropna().set_index(sub_collection).to_dict()[\"t\"+str(int(sub_collection[-1])+1)]\n",
-    "\n",
-    "    queryid_map = pd.read_csv('../data/query_id_map.csv')\n",
-    "    queryid_map = queryid_map[[sub_collection, \"t\"+str(int(sub_collection[-1])+1)]].dropna().set_index(sub_collection).to_dict()[\"t\"+str(int(sub_collection[-1])+1)]\n",
-    "\n",
-    "    return topics, qrels, docid_map_patch, queryid_map"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def split_sub_collection(sub_collection, k=3):\n",
+    "def split_sub_collection(sub_collection, topics, queryid_map, qrels, k=3):\n",
     "    overlap = {sub_collection: []}\n",
     "    topics_with_to_few_docs = []\n",
     "    valids_topics = []\n",
@@ -132,9 +67,6 @@
     "            \"test\": set()\n",
     "        }\n",
     "        \n",
-    "    # Load data for sub-collection\n",
-    "    topics, qrels, docid_map_patch, queryid_map = load_data(sub_collection)\n",
-    "    \n",
     "    # Filter relevant documents for logging only\n",
     "    rel_docs = qrels.merge(topics, on=\"qid\")\n",
     "    rel_docs = rel_docs[rel_docs[\"relevance\"] > 0]\n",
@@ -191,8 +123,8 @@
     "\n",
     "            folds[i][\"test\"].update(test_ids)\n",
     "            folds[i][\"train\"].update(train_ids)\n",
-    "                    \n",
-    "\n",
+    "            \n",
+    "    \n",
     "    # report on folds\n",
     "    for i in range(0, k):\n",
     "        overlap = len(folds[i][\"train\"].intersection(folds[i][\"test\"])) \n",
@@ -206,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -214,39 +146,64 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Docs rel for more topics: 18 / 400\n",
-      "Fold 0: train size: 84, test size: 60, overlap: 0, ratio: 0.58\n",
-      "Fold 1: train size: 98, test size: 46, overlap: 0, ratio: 0.68\n",
-      "Fold 2: train size: 106, test size: 38, overlap: 0, ratio: 0.74\n",
-      "\n",
       "Docs rel for more topics: 565 / 3370\n",
-      "Fold 0: train size: 500, test size: 338, overlap: 0, ratio: 0.60\n",
-      "Fold 1: train size: 570, test size: 268, overlap: 0, ratio: 0.68\n",
-      "Fold 2: train size: 606, test size: 232, overlap: 0, ratio: 0.72\n",
+      "Fold 0: train size: 535, test size: 348, overlap: 0, ratio: 0.61\n",
+      "Fold 1: train size: 592, test size: 291, overlap: 0, ratio: 0.67\n",
+      "Fold 2: train size: 639, test size: 244, overlap: 0, ratio: 0.72\n",
       "\n",
       "Docs rel for more topics: 683 / 3835\n",
-      "Fold 0: train size: 365, test size: 230, overlap: 0, ratio: 0.61\n",
-      "Fold 1: train size: 396, test size: 199, overlap: 0, ratio: 0.67\n",
-      "Fold 2: train size: 429, test size: 166, overlap: 0, ratio: 0.72\n",
+      "Fold 0: train size: 570, test size: 380, overlap: 0, ratio: 0.60\n",
+      "Fold 1: train size: 651, test size: 299, overlap: 0, ratio: 0.69\n",
+      "Fold 2: train size: 679, test size: 271, overlap: 0, ratio: 0.71\n",
       "\n",
       "Docs rel for more topics: 1296 / 4362\n",
-      "Fold 0: train size: 547, test size: 328, overlap: 0, ratio: 0.63\n",
-      "Fold 1: train size: 592, test size: 283, overlap: 0, ratio: 0.68\n",
-      "Fold 2: train size: 611, test size: 264, overlap: 0, ratio: 0.70\n",
+      "Fold 0: train size: 544, test size: 313, overlap: 0, ratio: 0.63\n",
+      "Fold 1: train size: 577, test size: 280, overlap: 0, ratio: 0.67\n",
+      "Fold 2: train size: 593, test size: 264, overlap: 0, ratio: 0.69\n",
       "\n",
       "Docs rel for more topics: 580 / 2689\n",
-      "Fold 0: train size: 829, test size: 478, overlap: 0, ratio: 0.63\n",
-      "Fold 1: train size: 879, test size: 428, overlap: 0, ratio: 0.67\n",
-      "Fold 2: train size: 906, test size: 401, overlap: 0, ratio: 0.69\n"
+      "Fold 0: train size: 476, test size: 263, overlap: 0, ratio: 0.64\n",
+      "Fold 1: train size: 494, test size: 245, overlap: 0, ratio: 0.67\n",
+      "Fold 2: train size: 508, test size: 231, overlap: 0, ratio: 0.69\n",
+      "\n",
+      "Docs rel for more topics: 2337 / 10259\n",
+      "Fold 0: train size: 1005, test size: 586, overlap: 0, ratio: 0.63\n",
+      "Fold 1: train size: 1062, test size: 529, overlap: 0, ratio: 0.67\n",
+      "Fold 2: train size: 1115, test size: 476, overlap: 0, ratio: 0.70\n"
      ]
     }
    ],
    "source": [
-    "folds = split_sub_collection(\"t0\", k=3)\n",
-    "folds = split_sub_collection(\"t1\", k=3)\n",
-    "folds = split_sub_collection(\"t2\", k=3)\n",
-    "folds = split_sub_collection(\"t3\", k=3)\n",
-    "folds = split_sub_collection(\"t4\", k=3)"
+    "k = 3\n",
+    "sub_collections = [\"t1\", \"t2\", \"t3\", \"t4\", \"t5\"]  # we skip t0 as it is the base collection and has no history\n",
+    "splits = {}\n",
+    "\n",
+    "for sub_collection in sub_collections:\n",
+    "    splits[sub_collection] = {}\n",
+    "    # Load data for sub-collection\n",
+    "    topics, qrels, docid_map_patch, queryid_map = load_data(sub_collection)\n",
+    "    \n",
+    "    # for pyterrier \n",
+    "    topics[\"query\"] = topics[\"query\"].str.replace(\"'\", \"\").replace(\"/\", \"\")\n",
+    "    \n",
+    "    # Create Folds\n",
+    "    folds = split_sub_collection(sub_collection, topics, queryid_map, qrels, k=3)\n",
+    "     \n",
+    "    for fold_no in range(0, k):\n",
+    "        splits[sub_collection][fold_no] = {\n",
+    "            \"train\": list(folds[fold_no][\"train\"]),\n",
+    "            \"test\": list(folds[fold_no][\"test\"])\n",
+    "        }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(BASE_PATH + \"/splits.json\", \"w\") as f:\n",
+    "    f.write(json.dumps(splits))"
    ]
   },
   {
