add some introductions to the evaluation.

--- a/paper/ecir25-longeval-lit.bib
+++ b/paper/ecir25-longeval-lit.bib
@@ -86,3 +86,87 @@
   url          = {https://doi.org/10.1145/3511808.3557068},
   doi          = {10.1145/3511808.3557068}
 }
+
+
+@inproceedings{alkhalifa:2024,
+  author       = {Rabab Alkhalifa and
+                  Hsuvas Borkakoty and
+                  Romain Deveaud and
+                  Alaa El{-}Ebshihy and
+                  Luis Espinosa Anke and
+                  Tobias Fink and
+                  Petra Galusc{\'{a}}kov{\'{a}} and
+                  Gabriela Gonz{\'{a}}lez S{\'{a}}ez and
+                  Lorraine Goeuriot and
+                  David Iommi and
+                  Maria Liakata and
+                  Harish Tayyar Madabushi and
+                  Pablo Medina{-}Alias and
+                  Philippe Mulhem and
+                  Florina Piroi and
+                  Martin Popel and
+                  Arkaitz Zubiaga},
+  editor       = {Guglielmo Faggioli and
+                  Nicola Ferro and
+                  Petra Galusc{\'{a}}kov{\'{a}} and
+                  Alba Garc{\'{\i}}a Seco de Herrera},
+  title        = {Extended Overview of the {CLEF} 2024 LongEval Lab on Longitudinal
+                  Evaluation of Model Performance},
+  booktitle    = {Working Notes of the Conference and Labs of the Evaluation Forum {(CLEF}
+                  2024), Grenoble, France, 9-12 September, 2024},
+  series       = {{CEUR} Workshop Proceedings},
+  volume       = {3740},
+  pages        = {2267--2289},
+  publisher    = {CEUR-WS.org},
+  year         = {2024},
+  url          = {https://ceur-ws.org/Vol-3740/paper-213.pdf},
+  timestamp    = {Wed, 21 Aug 2024 22:46:00 +0200},
+  biburl       = {https://dblp.org/rec/conf/clef/AlkhalifaBDEAFG24.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{keller:2024b,
+  title = {Leveraging Prior Relevance Signals in Web Search},
+  booktitle = {Working Notes of the Conference and Labs of the Evaluation Forum ({{CLEF}} 2024), Grenoble, France, 9-12 September, 2024},
+  author = {Keller, J{\"u}ri and Breuer, Timo and Schaer, Philipp},
+  editor = {Faggioli, Guglielmo and Ferro, Nicola and Galusc{\'a}kov{\'a}, Petra and {de Herrera}, Alba Garc{\'{\i}}a Seco},
+  year = {2024},
+  series = {{{CEUR}} Workshop Proceedings},
+  volume = {3740},
+  pages = {2396--2406},
+  publisher = {CEUR-WS.org},
+  bibsource = {dblp computer science bibliography, https://dblp.org},
+  timestamp = {Wed, 21 Aug 2024 22:46:00 +0200},
+  file = {/Users/jueri/Zotero/storage/J8I7KZFT/Keller et al. - 2024 - Leveraging prior relevance signals in web search.pdf}
+}
+
+
+@book{robertson:1994,
+  title = {Okapi at {{TREC-3}}.},
+  author = {Robertson, Stephen and Walker, Steve and Jones, Susan and {Hancock-Beaulieu}, Micheline and Gatford, Mike},
+  year = {1994},
+  month = jan,
+  abstract = {The Okapi system comprises a search engine or basic search system (BSS), a low level interface used mainly for batch runs and a user interface for the manual search experiments, together with data conversion and inversion utilities. This paper reports on City University's work on the TREC-2 project from its commencement up to November 1993. It includes many results which were obtained after the August 1993 deadline for submission of official results.},
+  file = {/Users/jueri/Zotero/storage/9GG8ETNH/okapi_trec3.pdf}
+}
+
+
+@inproceedings{chapelle:2009,
+  author       = {Olivier Chapelle and
+                  Ya Zhang},
+  editor       = {Juan Quemada and
+                  Gonzalo Le{\'{o}}n and
+                  Yo{\"{e}}lle S. Maarek and
+                  Wolfgang Nejdl},
+  title        = {A dynamic bayesian network click model for web search ranking},
+  booktitle    = {Proceedings of the 18th International Conference on World Wide Web,
+                  {WWW} 2009, Madrid, Spain, April 20-24, 2009},
+  pages        = {1--10},
+  publisher    = {{ACM}},
+  year         = {2009},
+  url          = {https://doi.org/10.1145/1526709.1526711},
+  doi          = {10.1145/1526709.1526711},
+  timestamp    = {Mon, 11 Mar 2024 13:45:27 +0100},
+  biburl       = {https://dblp.org/rec/conf/www/ChapelleZ09.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
