--- a/paper/ecir25-longeval-part2.tex
+++ b/paper/ecir25-longeval-part2.tex
@@ -13,13 +13,12 @@
     \end{tabularx}
 \end{table}
 
-Changes in test collections are described on a high level by Keller et al. in~\cite{keller:2024} along the main components of a test collection, the documents, topics, and qrels, and the create, update, and delete operation of persistent storage. While the LongEval dataset contains changes in all components of all types, the investigated approaches are mainly concerned with changing documents that may also affect the relevance label.
+Changes in evolving test collections are classified on a high level along theire main components, the documents, topics, and qrels, and the create, update, and delete operation of persistent storage by Keller et al. in~\cite{keller:2024}. Based on this classification schema different retrieval scenarios emerge that can be quantified on different levels and directly related to challenges IR systems face.
 
 
+While the LongEval dataset contains changes in all components of all types, the investigated approaches are mainly concerned with changing documents that may also affect the relevance label.
 
-% We investigate the scenario D'TQ' and D'TQ -> Changes in the documents with and without changes in the qrels
 % Table 2 refers to the scenario of D'TQ -> documents changes but relevance stayed the same
-
 
 
 Things that sound related but are not yet checked/incorporated are appended to this sentence~\cite{li:2022}.
