--- a/notebooks/create_index_splits.ipynb
+++ b/notebooks/create_index_splits.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "terrier-prf -SNAPSHOT jar not found, downloading to /root/.pyterrier...\n",
+      "Done\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "sys.path.append('../')\n",
@@ -17,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2227,7 +2236,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.20"
   }
  },
  "nbformat": 4,
