--- a/paper/ecir25-longeval.sty
+++ b/paper/ecir25-longeval.sty
@@ -8,6 +8,7 @@
 \usepackage{graphicx}
 \usepackage{tabularx}
 \usepackage{booktabs} 
+\usepackage{multirow} 
 % Used for displaying a sample figure. If possible, figure files should
 % be included in EPS format.
 %
